[gd_scene load_steps=20 format=3 uid="uid://tmj83l5wx5t3"]

[ext_resource type="Script" path="res://Scripts/character.gd" id="1_22uft"]
[ext_resource type="Texture2D" uid="uid://b3g6n1h8ykn8g" path="res://icon.svg" id="2_bhq1l"]
[ext_resource type="PackedScene" uid="uid://cstnth5yeg4sw" path="res://Scenes/Components/HealthComponent.tscn" id="3_f8k2s"]
[ext_resource type="PackedScene" uid="uid://j362yu1l1riy" path="res://Scenes/Components/PlayerHitbox.tscn" id="4_285m4"]
[ext_resource type="Script" path="res://Scripts/attacksmanager.gd" id="5_gwk8w"]
[ext_resource type="PackedScene" uid="uid://bcdteu1jviiig" path="res://Scenes/Characters/template/attacks/light.tscn" id="6_yah0a"]
[ext_resource type="PackedScene" uid="uid://dyyjug8rdgsn8" path="res://Scenes/Characters/template/attacks/h1.tscn" id="7_gywi4"]
[ext_resource type="PackedScene" uid="uid://docwvveq11n7n" path="res://Scenes/Characters/template/attacks/h2.tscn" id="8_t2vry"]
[ext_resource type="PackedScene" uid="uid://cn0x7ofqfsw8n" path="res://Scenes/Characters/template/attacks/h3.tscn" id="9_jbcey"]
[ext_resource type="PackedScene" uid="uid://c66mm6o7g4bcn" path="res://Scenes/Characters/template/attacks/h4.tscn" id="10_164uy"]
[ext_resource type="PackedScene" uid="uid://bppf31fad5djw" path="res://Scenes/Characters/template/attacks/h0.tscn" id="11_fy8on"]
[ext_resource type="PackedScene" uid="uid://c261n1knq34up" path="res://Scenes/Characters/template/attacks/ah0.tscn" id="12_8qyoy"]
[ext_resource type="PackedScene" uid="uid://bxyoa4g61qtaj" path="res://Scenes/Characters/template/attacks/ah1.tscn" id="13_h5sd0"]
[ext_resource type="PackedScene" uid="uid://brm2dvytugju8" path="res://Scenes/Characters/template/attacks/ah2.tscn" id="14_j4qyg"]
[ext_resource type="PackedScene" uid="uid://cmc1t6ed3167t" path="res://Scenes/Characters/template/attacks/ah3.tscn" id="15_8w2un"]
[ext_resource type="PackedScene" uid="uid://j3fegltj2i3w" path="res://Scenes/Characters/template/attacks/ah4.tscn" id="16_e4o55"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2eo4l"]
size = Vector2(128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_o24ec"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"adash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"ah0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"ah1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"ah2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"ah3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"ah4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"aidle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"alight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"arun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"astop_running",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"h0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"h1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"h2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"h3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"h4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"light",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bhq1l")
}],
"loop": true,
"name": &"stop_running",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_8tefe"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:facing_right")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Player", "Trackable"]]
script = ExtResource("1_22uft")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2eo4l")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_o24ec")
animation = &"arun"

[node name="HealthComponent" parent="." instance=ExtResource("3_f8k2s")]

[node name="PlayerHitbox" parent="." node_paths=PackedStringArray("healthcomponent") instance=ExtResource("4_285m4")]
collision_layer = 2
collision_mask = 2
healthcomponent = NodePath("../HealthComponent")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
shape = SubResource("RectangleShape2D_2eo4l")

[node name="dashtimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="dashcooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="awakentime" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Attacks" type="Node2D" parent="." node_paths=PackedStringArray("l_attack_man", "h0_attack_man", "h1_attack_man", "h2_attack_man", "h3_attack_man", "h4_attack_man", "ah0_attack_man", "ah1_attack_man", "ah2_attack_man", "ah3_attack_man", "ah4_attack_man")]
script = ExtResource("5_gwk8w")
l_attack_man = NodePath("Light")
h0_attack_man = NodePath("H0")
h1_attack_man = NodePath("H1")
h2_attack_man = NodePath("H2")
h3_attack_man = NodePath("H3")
h4_attack_man = NodePath("H4")
ah0_attack_man = NodePath("AH0")
ah1_attack_man = NodePath("AH1")
ah2_attack_man = NodePath("AH2")
ah3_attack_man = NodePath("AH3")
ah4_attack_man = NodePath("AH4")

[node name="Light" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("6_yah0a")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="H1" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("7_gywi4")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="H2" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("8_t2vry")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="H3" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("9_jbcey")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="H4" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("10_164uy")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="H0" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("11_fy8on")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="AH0" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("12_8qyoy")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="AH1" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("13_h5sd0")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="AH2" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("14_j4qyg")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="AH3" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("15_8w2un")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="AH4" parent="Attacks" node_paths=PackedStringArray("first_attack") instance=ExtResource("16_e4o55")]
position = Vector2(72, 0)
first_attack = NodePath("0")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_8tefe")

[node name="hplabel" type="Label" parent="."]
offset_left = -64.0
offset_top = -87.0
offset_right = 65.0
offset_bottom = -64.0
text = "HP: 100"
horizontal_alignment = 1

[node name="awakenpercentlabel" type="Label" parent="."]
auto_translate_mode = 1
offset_left = -64.0
offset_top = -112.0
offset_right = 65.0
offset_bottom = -89.0
text = "Awaken: 0%"
horizontal_alignment = 1

[connection signal="timeout" from="dashtimer" to="." method="_on_dashtimer_timeout"]
[connection signal="timeout" from="dashcooldown" to="." method="_on_dashcooldown_timeout"]
[connection signal="timeout" from="awakentime" to="." method="_on_awakentime_timeout"]
